@@ -63,6 +63,9 @@ Bug Fixes
 * LUCENE-9635: BM25FQuery - Mask encoded norm long value in array lookup.
   (Yilun Cui)
   
+* LUCENE-9617: Fix per-field memory leak in IndexWriter.deleteAll(). Reset next available internal
+  field number to 0 on FieldInfos.clear(), to avoid wasting FieldInfo references. (Michael Froh)
+
 Other
 ---------------------
 
